--- a/.github/workflows/playwright-default-tests.yml
+++ b/.github/workflows/playwright-default-tests.yml
@@ -2,6 +2,9 @@ name: Playwright Tests
 on:
   pull_request:
     branches: [main, master]
+    paths:
+      - 'frontend/**'
+
 jobs:
   test:
     timeout-minutes: 60
@@ -17,13 +20,16 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: frontend
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+        working-directory: frontend
 
       - name: Run changed Playwright tests
         run: npx playwright test --project=chromium --only-changed=origin/$GITHUB_BASE_REF
         if: github.event_name == 'pull_request'
+        working-directory: frontend
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
