--- a/.github/workflows/playwright-default-with-docker.yml
+++ b/.github/workflows/playwright-default-with-docker.yml
@@ -1,16 +1,16 @@
 name: Playwright Tests
 on:
-  # pull_request:
-  #   branches: [main, master]
-  #   paths:
-  #     - 'frontend/**'
-  workflow_dispatch:
-
+  pull_request:
+    branches: [main, master]
+    paths:
+      - 'frontend/**'
 
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.46.1-jammy
     steps:
       - uses: actions/checkout@v4
         with:
@@ -24,9 +24,9 @@ jobs:
         run: npm ci
         working-directory: frontend
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-        working-directory: frontend
+      # - name: Install Playwright Browsers
+      #   run: npx playwright install --with-deps
+      #   working-directory: frontend
 
       - name: Run changed Playwright tests
         run: npx playwright test --project=chromium --only-changed=origin/$GITHUB_BASE_REF
