--- a/.github/workflows/playwright-default-tests-in-runner.yml
+++ b/.github/workflows/playwright-default-tests-in-runner.yml
@@ -1,9 +1,9 @@
-name: Playwright Tests
+name: Playwright Tests in ubuntu-latest
 on:
-  # pull_request:
-  #   branches: [main, master]
-  #   paths:
-  #     - 'frontend/**'
+  pull_request:
+    branches: [main, master]
+    paths:
+      - 'frontend/**'
   workflow_dispatch:
 
 
