--- a/.github/workflows/playwright-default-tests-in-runner.yml
+++ b/.github/workflows/playwright-default-tests-in-runner.yml
@@ -24,6 +24,9 @@ jobs:
         run: npm ci
         working-directory: frontend
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
         working-directory: frontend
